# Decenza

./: .gitignore  CLAUDE.md  CMakeLists.txt  DFLOW.md  ISSUE_CLEANUP_TODO.md  PACK_Source.bat  RASPBERRY_PI.md  build.sh  claude.md  de1-qt.qmlproject  de1-qt.qrc  decenza.desktop  logcat_dump.txt  logcat_last_10kb.txt  repo2txt.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android-release.yml  ios-release.yml  linux-arm64-release.yml  linux-release.yml  macos-release.yml  windows-release.yml
android/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle
build-android/: CMakeCache.txt  buildinfo.h
cmake/: ApplyVersionCode.cmake  IncrementBuildNumber.cmake  IncrementVersionCode.cmake
docs/: AI_ADVISOR.md  ANDROID_MEMORY_GC_PRESSURE.md  AUTO_FLOW_CALIBRATION.md  CPP_COMPLIANCE_AUDIT.md  ESPRESSO_DIAL_IN_REFERENCE.md  GRINDER_DATABASE.md  IOS_CI_FOR_CLAUDE.md  IOS_CI_SETUP.md  ISSUE_TRIAGE.md  MCP_SERVER.md  MCP_TEST_PLAN.md  PROFILE_KNOWLEDGE_BASE.md  SHOT_HISTORY.md  SHOT_REVIEW.md  SHOT_REVIEW_IMPROVEMENTS.md  UNIVERSAL_GRIND_SETTING.md  dark_roast_profiles_transcript.txt  layout-server.md  layout.md  light_roast_profiles_transcript.txt  medium_roast_profiles_transcript.txt  profile-porting-guide.md  simulation.md  text-widget.md
docs/CLAUDE_MD/: ACCESSIBILITY.md  AI_ADVISOR.md  AUTO_FLOW_CALIBRATION.md  BLE_PROTOCOL.md  CI_CD.md  DATA_MIGRATION.md  FIRMWARE_UPDATE.md  MCP_SERVER.md  PLATFORM_BUILD.md  RECIPE_PROFILES.md  SAW_LEARNING.md  STEAM_CALIBRATION.md  TESTING.md  VISUALIZER.md
docs/plans/: 2026-02-19-web-theme-editor-design.md  2026-02-19-web-theme-editor.md  2026-02-21-factory-reset-design.md  2026-02-21-factory-reset.md  2026-03-12-i18n-audit-fix.md  2026-03-24-unit-testing-overview.md  2026-03-24-unit-testing-phase1.md  2026-03-24-unit-testing-phase5-9-overview.md  2026-03-24-unit-testing-phase5.md  2026-03-24-unit-testing-phase6.md  2026-03-24-unit-testing-phase7.md  2026-03-24-unit-testing-phase8.md  2026-03-24-unit-testing-phase9.md  2026-04-07-qml-standard-controls-audit.md  2026-04-20-firmware-update-design.md
installer/: TEMPLATE_setupvars.iss  setup.iss  version.iss  version.iss.in
ios/: Decenza.entitlements  Info.plist  PrivacyInfo.xcprivacy  SafariViewHelper.h  SafariViewHelper.mm
macos/: Info.plist
obsidian-plugin/src/: types.ts
openspec/: AGENTS.md  project.md
qml/: Theme.qml  main.qml
qml/DE1App/: plugins.qmltypes  qmldir
qml/components/: AIConversationPanel.qml  AccessibleButton.qml  AccessibleMouseArea.qml  AccessibleTapHandler.qml  ActionButton.qml  BottomBar.qml  BrewDialog.qml  BrewRatioDialog.qml  ColorEditor.qml  ColorSwatch.qml  ColorWheel.qml  ColoredIcon.qml  ComparisonDataTable.qml  ComparisonGraph.qml  ComparisonInspectBar.qml  ComparisonShotTable.qml  ConnectionIndicator.qml  ConversationOverlay.qml  CrashReportDialog.qml  CrtOverlay.qml  CrtShaderEffect.qml  CupFillView.qml  DatePickerDialog.qml  De1CommunicationErrorDialog.qml  ExpandableTextArea.qml  ExtractionViewSelector.qml  GraphInspectBar.qml  GraphLegend.qml  HideKeyboardButton.qml  HistoryShotGraph.qml  KeyboardAwareContainer.qml  PhaseTimelineView.qml  PipesScreensaver.qml  PresetButton.qml  PresetPillRow.qml  ProfileGraph.qml  ProfileInfoButton.qml  ProfilePreviewPopup.qml  QrCode.qml  QualityBadges.qml  (+30 more)
qml/designer/: DE1AppStubs.qml
qml/pages/: AISettingsPage.qml  AutoFavoriteInfoPage.qml  AutoFavoritesPage.qml  BeanInfoPage.qml  CommunityBrowserPage.qml  DescalingPage.qml  DialingAssistantPage.qml  EspressoPage.qml  FlowCalibrationPage.qml  FlowEditorPage.qml  FlushPage.qml  HotWaterPage.qml  IdlePage.qml  PostShotReviewPage.qml  PressureEditorPage.qml  ProfileEditorPage.qml  ProfileImportPage.qml  ProfileInfoPage.qml  ProfileSelectorPage.qml  RecipeEditorPage.qml  ScreensaverPage.qml  SettingsPage.qml  ShotComparisonPage.qml  ShotDetailPage.qml  ShotHistoryPage.qml  ShotMetadataPage.qml  SimpleProfileEditorPage.qml  SteamPage.qml  VisualizerBrowserPage.qml  VisualizerMultiImportPage.qml
qml/simulator/: GHCSimulatorWindow.qml
resources/: ai.qrc  emoji.qrc  profiles.qrc  resources.qrc
resources/CoffeeCup/: FullRes.7z
resources/ai/: claude_agent.md  profile_knowledge.md
resources/profiles/: 7g_basket.json  80_s_espresso.json  a_flow_default_dark.json  a_flow_default_light.json  a_flow_default_like_dflow.json  a_flow_default_medium.json  a_flow_default_very_dark.json  adaptive_v2.json  advanced_spring_lever.json  best_overall_pressure_profile.json  best_practice_light_roast.json  blooming_allong.json  blooming_allonge.json  blooming_espresso.json  classic_italian_espresso.json  cleaning_forward_flush.json  cleaning_forward_flush_x5.json  cleaning_weber_spring_clean.json  d_flow_q.json  (+80 more)
scripts/: compare_profiles.py  download_emoji.py  sync_profiles.py  test_mcp.sh  test_profile_import.py
shaders/: crt.frag  cup_lighten.frag  cup_mask.frag
src/: main.cpp  version.h.in  version_code.cpp.in
tests/: CMakeLists.txt  tst_aborted_shot_classifier.cpp  tst_blefidelity.cpp  tst_dbmigration.cpp  tst_de1device_firmware.cpp  tst_difluidr2.cpp  tst_firmwareassetcachehelpers.cpp  tst_firmwareheader.cpp  tst_firmwarepackets.cpp  tst_firmwareupdater.cpp  tst_mcpserver_session.cpp  tst_mcptools_profiles.cpp  tst_mcptools_write.cpp  tst_mmrwrite.cpp  tst_profile.cpp  tst_profilemanager.cpp  tst_profileupload.cpp  tst_recipegenerator.cpp  tst_recipeparams.cpp  tst_sav.cpp  tst_saw.cpp  tst_saw_settings.cpp  tst_sawprediction.cpp  tst_scaleprotocol.cpp  tst_settings.cpp  tst_settling.cpp  tst_shotanalysis.cpp  tst_shotrecord_cache.cpp  tst_shotsettings.cpp  tst_shotsummarizer.cpp  tst_steamcalibrator.cpp  tst_steamhealth.cpp  tst_tclimport.cpp  tst_weightprocessor.cpp
tests/data/de1app_profiles/: A-Flow____default-dark.tcl  A-Flow____default-light.tcl  A-Flow____default-like-dflow.tcl  A-Flow____default-medium.tcl  A-Flow____default-very-dark.tcl
tests/data/shots/: manifest.json  synthetic_shot_835_gusher.json
tests/mocks/: McpTestFixture.h  MockScaleDevice.h  MockTransport.h
(+436 files in other folders)
